--- a/Linear Algebra Done Taiwan/preamble.tex
+++ b/Linear Algebra Done Taiwan/preamble.tex
@@ -107,6 +107,7 @@
 \newtheorem{corollary}[theorem]{Corollary}
 \newtheorem{axiom}[theorem]{Axiom}
 \newtheorem{example}[theorem]{Example}
+\newtheorem{equiv_def}[theorem]{Equivalent Definition}
 
 % tcolorbox Setup
 \usepackage[most,many,breakable]{tcolorbox}
